--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <header>
         <h1>Ruko Game</h1>
+        <a href="registro.html" class="btn-registro">Registrarse</a>
     </header>
 
     <nav>
