Añadido botón 'Volver al Inicio' en el formulario de registro

--- a/registro.html
+++ b/registro.html
@@ -75,6 +75,11 @@
                 <button type="reset" class="btn btn-secondary">Limpiar</button>
             </div>
         </form>
+
+        <!-- Botón Volver al Inicio -->
+        <div class="d-flex justify-content-center mt-4">
+            <button onclick="window.location.href='index.html';" class="btn btn-dark">Volver al Inicio</button>
+        </div>
     </div>
 
     <!-- Scripts de Bootstrap y jQuery -->
