--- a/registro.html
+++ b/registro.html
@@ -16,46 +16,46 @@
             <div class="row">
                 <!-- Nombre Completo -->
                 <div class="col-md-6">
-                    <label for="nombre" class="form-label">Nombre Completo</label>
+                    <label for="nombre" class="form-label">Nombre Completo *</label>
                     <input type="text" class="form-control" id="nombre" required>
                     <div class="invalid-feedback">Por favor, ingrese su nombre completo.</div>
                 </div>
 
                 <!-- Nombre de Usuario -->
                 <div class="col-md-6">
-                    <label for="usuario" class="form-label">Nombre de Usuario</label>
+                    <label for="usuario" class="form-label">Nombre de Usuario *</label>
                     <input type="text" class="form-control" id="usuario" required>
                     <div class="invalid-feedback">El usuario no puede estar vacío.</div>
                 </div>
             </div>
 
             <div class="row mt-3">
-                <!-- Correo Electrónico -->
+                <!-- Correo Electrónico * -->
                 <div class="col-md-6">
-                    <label for="correo" class="form-label">Correo Electrónico</label>
+                    <label for="correo" class="form-label">Correo Electrónico *</label>
                     <input type="email" class="form-control" id="correo" required>
-                    <div class="invalid-feedback">Ingrese un correo válido.</div>
+                    <div class="invalid-feedback">Ingrese un correo válido.*</div>
                 </div>
 
-                <!-- Fecha de Nacimiento -->
+                <!-- Fecha de Nacimiento * -->
                 <div class="col-md-6">
-                    <label for="fechaNacimiento" class="form-label">Fecha de Nacimiento</label>
+                    <label for="fechaNacimiento" class="form-label">Fecha de Nacimiento *</label>
                     <input type="date" class="form-control" id="fechaNacimiento" required>
-                    <div class="invalid-feedback">Ingrese su fecha de nacimiento.</div>
+                    <div class="invalid-feedback">Ingrese su fecha de nacimiento*.</div>
                 </div>
             </div>
 
             <div class="row mt-3">
                 <!-- Contraseña -->
                 <div class="col-md-6">
-                    <label for="clave" class="form-label">Contraseña</label>
+                    <label for="clave" class="form-label">Contraseña * </label>
                     <input type="password" class="form-control" id="clave" required>
                     <div class="invalid-feedback">Debe tener al menos 6 caracteres, una mayúscula y un número.</div>
                 </div>
 
                 <!-- Repetir Contraseña -->
                 <div class="col-md-6">
-                    <label for="repetirClave" class="form-label">Repetir Contraseña</label>
+                    <label for="repetirClave" class="form-label">Repetir Contraseña *</label>
                     <input type="password" class="form-control" id="repetirClave" required>
                     <div class="invalid-feedback">Las contraseñas deben coincidir.</div>
                 </div>
@@ -87,4 +87,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="js/validaciones.js"></script>
 </body>
+<footer>
+    <p>© 2025 Ruko Game - Todos los derechos reservados</p>
+</footer>
 </html>
